--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,16 @@
             <artifactId>netty-transport-udt</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk18on</artifactId>
+            <version>1.77</version>
+        </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcpkix-jdk18on</artifactId>
+            <version>1.77</version>
+        </dependency>
+        <dependency>
             <groupId>org.littleshoot</groupId>
             <artifactId>dnssec4j</artifactId>
             <version>0.1.6</version>
@@ -156,6 +166,11 @@
                     <artifactId>netty</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.15.1</version>
         </dependency>
     </dependencies>
     <build>
